# IoTEYE_Server

./: CMakeLists.txt  README.md  main.cpp
Headers/: adminOptions.h  device.h  functional.h  serverResources.h  user.h
Sources/: device.cpp  functional.cpp  serverResources.cpp  user.cpp
